--- a/webstatic/styles/3-header.css
+++ b/webstatic/styles/3-header.css
@@ -14,7 +14,7 @@ header {
 }
 
 header .logo {
-    background: url("../images/hbnb_logo.png") no-repeat center;
+    background: url("../images/logo_hbnb.png") no-repeat center;
     width: 20%;
     height: 100%;
     padding-left: 20px;
