--- a/webstatic/styles/4-common.css
+++ b/webstatic/styles/4-common.css
@@ -21,3 +21,10 @@ body {
     flex-direction: column;
     height: 100vh;
 }
+
+/* filters container */
+.container {
+    /* min width: 600px, max-width: 1000px */
+    width: clamp(600px, 90vw + .5rem, 1000px);
+    margin: 30px auto;
+}
