--- a/webstatic/styles/4-common.css
+++ b/webstatic/styles/4-common.css
@@ -14,6 +14,9 @@
     font-size: var(--globalFontSize);
     font-family: var(--globalFontFamily);
     border: none;
+    box-sizing: border-box;
+    text-decoration: none;
+    list-style-type: none;    
 }
 
 body {
