--- a/webstatic/styles/7-places.css
+++ b/webstatic/styles/7-places.css
@@ -6,13 +6,17 @@
     --dropdownBg: #FAFAFA;
 }
 
+.places > h1 {
+    font-size: 30px; 
+    margin-top: 20px;
+}
+
 .places > article {
     display: flex;
     justify-content: center;
     width: 390px;
     padding: 20px;
     margin: 20px;
-    /* background-color:bisque; */
     border: 1px solid var(--lightRed); 
     border-radius: 4px;
 }
